--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-firestore:17.1.3'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
