--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main">
@@ -19,9 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OfferParkingActivity"
-            android:label="@string/offerParkingActivityTitle"
-            ></activity>
+        <activity
+            android:name=".OfferParkingActivity"
+            android:label="@string/offerParkingActivityTitle" />
+        <activity android:name=".RentParkingActivity"></activity>
     </application>
 
 </manifest>
