--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:name=".OfferParkingActivity"
             android:label="@string/offerParkingActivityTitle" />
         <activity android:name=".RentParkingActivity" />
-        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".OrderActivity"
+            android:label="@string/orderParkingActivityTitle"/>
     </application>
 
 </manifest>
