--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,11 @@
             android:name=".OfferParkingActivity"
             android:label="@string/offerParkingActivityTitle" />
         <activity android:name=".RentParkingActivity" />
-        <activity android:name=".OrderActivity"
-            android:label="@string/orderParkingActivityTitle"/>
+        <activity
+            android:name=".OrderActivity"
+            android:label="@string/orderParkingActivityTitle" />
+        <activity android:name=".ViewOrdersActivity"
+            android:label="@string/ViewOrdersActivityLabel"/>
     </application>
 
 </manifest>
