--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.3'
     implementation 'com.firebaseui:firebase-ui-firestore:4.2.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-functions:16.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
